--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 p {
     color: red;
+    font-size: 32px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: aqua;
 }
